// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationList renders in desktop mode 1`] = `
<div>
  <ul
    class="c-NavigationList c-NavigationList_desktop"
  >
    <li
      class="c-NavigationList__Item c-NavigationList__Item_active"
    >
      <a
        class="c-NavigationListButton c-NavigationListButton_desktop c-NavigationListButton_active"
        href="/"
      >
        <div
          class="c-NavigationListButton__Circle"
        >
          <div
            class="c-NavigationListButton__Picto"
          >
            <img
              alt=""
              data-nimg="1"
              decoding="async"
              height="24"
              loading="lazy"
              src="/images/pictos/homepage.svg"
              style="color: transparent;"
              width="24"
            />
          </div>
        </div>
        <span
          class="c-NavigationListButton__Label"
        >
          Accueil
        </span>
      </a>
    </li>
    <li
      class="c-NavigationList__Item "
    >
      <a
        class="c-NavigationListButton c-NavigationListButton_desktop"
        href="/quiz"
      >
        <div
          class="c-NavigationListButton__Circle"
        >
          <div
            class="c-NavigationListButton__Picto"
          >
            <img
              alt=""
              data-nimg="1"
              decoding="async"
              height="24"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Fpoubelle_baree223556.png&w=48&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Fpoubelle_baree223556.png&w=32&q=75 1x, /_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Fpoubelle_baree223556.png&w=48&q=75 2x"
              style="color: transparent;"
              width="24"
            />
          </div>
        </div>
        <span
          class="c-NavigationListButton__Label"
        >
          Quizz
        </span>
      </a>
    </li>
    <li
      class="c-NavigationList__Item "
    >
      <a
        class="c-NavigationListButton c-NavigationListButton_desktop"
        href="/astuces"
      >
        <div
          class="c-NavigationListButton__Circle"
        >
          <div
            class="c-NavigationListButton__Picto"
          >
            <img
              alt=""
              data-nimg="1"
              decoding="async"
              height="24"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Ftriman191047.png&w=48&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Ftriman191047.png&w=32&q=75 1x, /_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Ftriman191047.png&w=48&q=75 2x"
              style="color: transparent;"
              width="24"
            />
          </div>
        </div>
        <span
          class="c-NavigationListButton__Label"
        >
          Tips
        </span>
      </a>
    </li>
    <li
      class="c-NavigationList__Item "
    >
      <a
        class="c-NavigationListButton c-NavigationListButton_desktop"
        href="/actualites"
      >
        <div
          class="c-NavigationListButton__Circle"
        >
          <div
            class="c-NavigationListButton__Picto"
          >
            <img
              alt=""
              data-nimg="1"
              decoding="async"
              height="24"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Fpoubelle_baree223556.png&w=48&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Fpoubelle_baree223556.png&w=32&q=75 1x, /_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Fpoubelle_baree223556.png&w=48&q=75 2x"
              style="color: transparent;"
              width="24"
            />
          </div>
        </div>
        <span
          class="c-NavigationListButton__Label"
        >
          News
        </span>
      </a>
    </li>
    <li
      class="c-NavigationList__Item "
    >
      <a
        class="c-NavigationListButton c-NavigationListButton_desktop"
        href="/contenu-libre/1"
      >
        <div
          class="c-NavigationListButton__Circle"
        >
          <div
            class="c-NavigationListButton__Picto"
          >
            <img
              alt=""
              data-nimg="1"
              decoding="async"
              height="24"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Faluminium613073.png&w=48&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Faluminium613073.png&w=32&q=75 1x, /_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Faluminium613073.png&w=48&q=75 2x"
              style="color: transparent;"
              width="24"
            />
          </div>
        </div>
        <span
          class="c-NavigationListButton__Label"
        >
          Edito 1
        </span>
      </a>
    </li>
    <li
      class="c-NavigationList__Item "
    >
      <a
        class="c-NavigationListButton c-NavigationListButton_desktop"
        href="/contenu-libre/2"
      >
        <div
          class="c-NavigationListButton__Circle"
        >
          <div
            class="c-NavigationListButton__Picto"
          >
            <img
              alt=""
              data-nimg="1"
              decoding="async"
              height="24"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Fpoint_vert825302.png&w=48&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Fpoint_vert825302.png&w=32&q=75 1x, /_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Fpoint_vert825302.png&w=48&q=75 2x"
              style="color: transparent;"
              width="24"
            />
          </div>
        </div>
        <span
          class="c-NavigationListButton__Label"
        >
          Edito 2
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`NavigationList renders in mobile mode 1`] = `
<div>
  <ul
    class="c-NavigationList c-NavigationList_mobile"
  >
    <li
      class="c-NavigationList__Item c-NavigationList__Item_active"
    >
      <a
        class="c-NavigationListButton c-NavigationListButton_mobile c-NavigationListButton_active"
        href="/"
      >
        <div
          class="c-NavigationListButton__Circle"
        >
          <div
            class="c-NavigationListButton__Picto"
          >
            <img
              alt=""
              data-nimg="1"
              decoding="async"
              height="24"
              loading="lazy"
              src="/images/pictos/homepage.svg"
              style="color: transparent;"
              width="24"
            />
          </div>
        </div>
        <span
          class="c-NavigationListButton__Label"
        >
          Accueil
        </span>
      </a>
    </li>
    <li
      class="c-NavigationList__Item "
    >
      <a
        class="c-NavigationListButton c-NavigationListButton_mobile"
        href="/quiz"
      >
        <div
          class="c-NavigationListButton__Circle"
        >
          <div
            class="c-NavigationListButton__Picto"
          >
            <img
              alt=""
              data-nimg="1"
              decoding="async"
              height="24"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Fpoubelle_baree223556.png&w=48&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Fpoubelle_baree223556.png&w=32&q=75 1x, /_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Fpoubelle_baree223556.png&w=48&q=75 2x"
              style="color: transparent;"
              width="24"
            />
          </div>
        </div>
        <span
          class="c-NavigationListButton__Label"
        >
          Quizz
        </span>
      </a>
    </li>
    <li
      class="c-NavigationList__Item "
    >
      <a
        class="c-NavigationListButton c-NavigationListButton_mobile"
        href="/astuces"
      >
        <div
          class="c-NavigationListButton__Circle"
        >
          <div
            class="c-NavigationListButton__Picto"
          >
            <img
              alt=""
              data-nimg="1"
              decoding="async"
              height="24"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Ftriman191047.png&w=48&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Ftriman191047.png&w=32&q=75 1x, /_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Ftriman191047.png&w=48&q=75 2x"
              style="color: transparent;"
              width="24"
            />
          </div>
        </div>
        <span
          class="c-NavigationListButton__Label"
        >
          Tips
        </span>
      </a>
    </li>
    <li
      class="c-NavigationList__Item "
    >
      <a
        class="c-NavigationListButton c-NavigationListButton_mobile"
        href="/actualites"
      >
        <div
          class="c-NavigationListButton__Circle"
        >
          <div
            class="c-NavigationListButton__Picto"
          >
            <img
              alt=""
              data-nimg="1"
              decoding="async"
              height="24"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Fpoubelle_baree223556.png&w=48&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Fpoubelle_baree223556.png&w=32&q=75 1x, /_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Fpoubelle_baree223556.png&w=48&q=75 2x"
              style="color: transparent;"
              width="24"
            />
          </div>
        </div>
        <span
          class="c-NavigationListButton__Label"
        >
          News
        </span>
      </a>
    </li>
    <li
      class="c-NavigationList__Item "
    >
      <a
        class="c-NavigationListButton c-NavigationListButton_mobile"
        href="/contenu-libre/1"
      >
        <div
          class="c-NavigationListButton__Circle"
        >
          <div
            class="c-NavigationListButton__Picto"
          >
            <img
              alt=""
              data-nimg="1"
              decoding="async"
              height="24"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Faluminium613073.png&w=48&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Faluminium613073.png&w=32&q=75 1x, /_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Faluminium613073.png&w=48&q=75 2x"
              style="color: transparent;"
              width="24"
            />
          </div>
        </div>
        <span
          class="c-NavigationListButton__Label"
        >
          Edito 1
        </span>
      </a>
    </li>
    <li
      class="c-NavigationList__Item "
    >
      <a
        class="c-NavigationListButton c-NavigationListButton_mobile"
        href="/contenu-libre/2"
      >
        <div
          class="c-NavigationListButton__Circle"
        >
          <div
            class="c-NavigationListButton__Picto"
          >
            <img
              alt=""
              data-nimg="1"
              decoding="async"
              height="24"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Fpoint_vert825302.png&w=48&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Fpoint_vert825302.png&w=32&q=75 1x, /_next/image?url=https%3A%2F%2Fstomsdmediadev.blob.core.windows.net%2Fmsd-media-dev%2Fassets-local-root%2Fpoint_vert825302.png&w=48&q=75 2x"
              style="color: transparent;"
              width="24"
            />
          </div>
        </div>
        <span
          class="c-NavigationListButton__Label"
        >
          Edito 2
        </span>
      </a>
    </li>
  </ul>
</div>
`;
